# CppProject

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  externals.txt
cmake/: Externals.cmake  LibrarySuffixes.cmake
src/: CMakeLists.txt  main.cpp
